2019-XX-XX   1.2.1:
-------------------
  * simplify markdown of readme so PyPI renders better


2019-12-06   1.2.0:
-------------------
  * add bitarray.util module which provides useful utility functions
  * deprecate `bitarray.bitdiff` in favor of `bitarray.util.count_xor`
  * use markdown for documentation
  * fix bug in .count() on 32bit systems in special cases when array size
    is 2^29 bits or larger
  * simplified tests by using bytes syntax
  * update smallints and sieve example to use new utility module
  * simplified mandel example to use numba
  * use file context managers in tests


2019-11-07   1.1.0:
-------------------
  * add frozenbitarray object
  * add optional start and stop parameters to .count() method
  * add official Python 3.8 support
  * optimize setrange() C-function by using memset
  * fix issue #74, bitarray is hashable on Python 2
  * fix issue #68, `unittest.TestCase.assert_` deprecated
  * improved test suite - tests should run in about 1 second
  * update documentation to use positional-only syntax in docstrings
  * update readme to pass Python 3 doctest
  * add utils module to examples


2019-07-19   1.0.1:
-------------------
  * fix readme to pass `twine check`


2019-07-15   1.0.0:
-------------------
  * fix bitarrays beings created from unicode in Python 2
  * use `PyBytes_*` in C code, treating the Py3k function names as default,
    which also removes all redefinitions of `PyString_*`
  * handle negative arguments of .index() method consistently with how
    they are treated for lists
  * add a few more comments to the C code
  * move imports outside tests: pickle, io, etc.
  * drop Python 2.5 support


2019-05-20   0.9.3:
-------------------
  * refactor resize() - only shrink allocated memory if new size falls
    lower than half the allocated size
  * improve error message when trying to initialize from float or complex


2019-04-29   0.9.2:
-------------------
  * fix to compile on Windows with VS 2015, issue #72

